# gmbs-crm

./: .eslintrc.json  .gitignore  CHANGELOG_UI_RESTORE.md  MISSION_ACCOMPLIE.md  OPTIMISATIONS_PERFORMANCE.md  README.md  README_API_V2.md  TRANSITION_ANIMATION_PROMPT.md  env.example  env.production.example  eslint.config.js  main.html  middleware 2.ts  middleware.ts  next.config.mjs  package.json  playwright.config.ts  sajid-ui-reference.md  tailwind.config.ts  temp_dashboard_f4c6c8.tsx  temp_globals_f4c6c8.css  temp_useRevealTransition_f4c6c8.tsx  test-load-performance.html  tsconfig.json  user-credentials-2025-09-01T18-39-24-945Z 2.json  user-credentials-2025-09-17T23-26-42-341Z.json  user-credentials-2025-10-07T20-17-12-825Z.json  user-credentials-restored-2025-09-19T10-16-11-329Z.json  user-credentials-restored-2025-09-22T12-41-54-813Z.json  user-credentials-restored-2025-10-13T19-51-18-746Z.json  vercel.json  vitest.config.ts
.git_backup/: ORIG_HEAD  config  index  index 2  index 3  index 4  packed-refs
.git_recovery/: COMMIT_EDITMSG  HEAD  cursor_metadata.pb  index
app/: globals.css  layout-complex.tsx  (+1 more)
scripts/ai/ocr/: CHANGELOG_DEMANDE_DEVIS.md  INDEX.md  LANGCHAIN_SUMMARY.md  NOUVEAU_SYSTEME_EXTRACTION.md  QUICKSTART_DEMANDE_DEVIS.md  QUICKSTART_LANGCHAIN.md  README.md  README_DEMANDE_DEVIS.md  README_FR.md  SETUP_LANGCHAIN.md  UV_GUIDE.md  config_example.yaml  example_usage.py  extract-from-devis-langchain.py  extract-from-devis.py  extract_demande_devis.py  import-extracted-devis.js  install.sh  ocr_strategy_alternative.py  pyproject.toml  requirements.txt  test_extraction.py
scripts/ai/ocr/prompts/: prompt_demande_de_devis.yaml
(+561 files in other folders)
