[project]
name = "crm-ocr-extraction"
version = "1.0.0"
description = "Extraction automatique de données depuis des devis avec LangChain et LLM gratuits"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "GMBS CRM Team" }
]

dependencies = [
    # Core LangChain
    "langchain>=0.2.16",
    "langchain-core>=0.2.38",
    "langchain-community>=0.2.16",
    
    # OCR
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    
    # Providers LLM
    "langchain-groq>=0.1.9",
    "huggingface-hub>=0.23.4",
    "langchain-openai>=0.1.22",
    
    # Validation
    "pydantic>=2.8.2",
    
    # Utilitaires
    "jsonschema>=4.23.0",
    "requests>=2.32.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# Dépendances de développement
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

# Providers spécifiques
ollama = []  # Ollama n'a pas besoin de package Python
groq = ["langchain-groq>=0.1.9"]
huggingface = ["huggingface-hub>=0.23.4"]
openai = ["langchain-openai>=0.1.22"]

[project.scripts]
extract-devis = "extract_from_devis_langchain:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false









